{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 15,
  "lineage": "e990e63d-02ad-9ec5-997d-75b3f06a8662",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terra-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:435734111523:internet-gateway/igw-08983a5874c855671",
            "id": "igw-08983a5874c855671",
            "owner_id": "435734111523",
            "tags": {
              "Name": "terra-IGW"
            },
            "tags_all": {
              "Name": "terra-IGW"
            },
            "vpc_id": "vpc-04b62fd66f5c52387"
          },
          "dependencies": [
            "aws_vpc.terra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terra-pub-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:435734111523:route-table/rtb-0341940806729559c",
            "id": "rtb-0341940806729559c",
            "owner_id": "435734111523",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08983a5874c855671",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terra-pub-RT"
            },
            "tags_all": {
              "Name": "terra-pub-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b62fd66f5c52387"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terra-IGW",
            "aws_vpc.terra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terra-pub-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-008e10c03df1f7210",
            "route_table_id": "rtb-0341940806729559c",
            "subnet_id": "subnet-0a56d04a49c2e6955"
          },
          "dependencies": [
            "aws_internet_gateway.terra-IGW",
            "aws_route_table.terra-pub-RT",
            "aws_subnet.terra-pub-1",
            "aws_vpc.terra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terra-pub-2-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062398a452bb20e70",
            "route_table_id": "rtb-0341940806729559c",
            "subnet_id": "subnet-0042d0c576019fbbd"
          },
          "dependencies": [
            "aws_internet_gateway.terra-IGW",
            "aws_route_table.terra-pub-RT",
            "aws_subnet.terra-pub-2",
            "aws_vpc.terra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terra-pub-3-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e2c01707c5bb79f",
            "route_table_id": "rtb-0341940806729559c",
            "subnet_id": "subnet-09a376d9ebb6bbce9"
          },
          "dependencies": [
            "aws_internet_gateway.terra-IGW",
            "aws_route_table.terra-pub-RT",
            "aws_subnet.terra-pub-3",
            "aws_vpc.terra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terra_stack_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:435734111523:security-group/sg-0331dcdbb6d963dad",
            "description": "Sec Grp for terra ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0331dcdbb6d963dad",
            "ingress": [
              {
                "cidr_blocks": [
                  "59.97.116.152/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terra-stack-sg",
            "name_prefix": "",
            "owner_id": "435734111523",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-ssh"
            },
            "tags_all": {
              "Name": "allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b62fd66f5c52387"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra-priv-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:435734111523:subnet/subnet-0d220ca0b1a7ebd93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d220ca0b1a7ebd93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "435734111523",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terra-priv-1"
            },
            "tags_all": {
              "Name": "terra-priv-1"
            },
            "vpc_id": "vpc-04b62fd66f5c52387"
          },
          "dependencies": [
            "aws_vpc.terra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra-priv-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:435734111523:subnet/subnet-0861416f1f4010f9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0861416f1f4010f9f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "435734111523",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terra-priv-2"
            },
            "tags_all": {
              "Name": "terra-priv-2"
            },
            "vpc_id": "vpc-04b62fd66f5c52387"
          },
          "dependencies": [
            "aws_vpc.terra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra-priv-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:435734111523:subnet/subnet-055f8613cdf15a069",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-055f8613cdf15a069",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "435734111523",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terra-priv-3"
            },
            "tags_all": {
              "Name": "terra-priv-3"
            },
            "vpc_id": "vpc-04b62fd66f5c52387"
          },
          "dependencies": [
            "aws_vpc.terra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra-pub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:435734111523:subnet/subnet-0a56d04a49c2e6955",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a56d04a49c2e6955",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "435734111523",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terra-pub-1"
            },
            "tags_all": {
              "Name": "terra-pub-1"
            },
            "vpc_id": "vpc-04b62fd66f5c52387"
          },
          "dependencies": [
            "aws_vpc.terra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra-pub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:435734111523:subnet/subnet-0042d0c576019fbbd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0042d0c576019fbbd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "435734111523",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terra-pub-2"
            },
            "tags_all": {
              "Name": "terra-pub-2"
            },
            "vpc_id": "vpc-04b62fd66f5c52387"
          },
          "dependencies": [
            "aws_vpc.terra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra-pub-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:435734111523:subnet/subnet-09a376d9ebb6bbce9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a376d9ebb6bbce9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "435734111523",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terra-pub-3"
            },
            "tags_all": {
              "Name": "terra-pub-3"
            },
            "vpc_id": "vpc-04b62fd66f5c52387"
          },
          "dependencies": [
            "aws_vpc.terra"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:435734111523:vpc/vpc-04b62fd66f5c52387",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0542983d8e5e51a6c",
            "default_route_table_id": "rtb-057604695bb09beed",
            "default_security_group_id": "sg-055cbc23bc369c58b",
            "dhcp_options_id": "dopt-0936dc75f36ff88ad",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04b62fd66f5c52387",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-057604695bb09beed",
            "owner_id": "435734111523",
            "tags": {
              "Name": "terra-vpc"
            },
            "tags_all": {
              "Name": "terra-vpc"
            }
          }
        }
      ]
    }
  ]
}